examples/bad/type4.swifty
//cant iterate over variable which is not an array
var x = 5
for y in x {
   print y
}
